# Notif_service

./: README.md
project/: .env  pyproject.toml
project-old/: .env  pyproject.toml
project-old/src/project/: alembic.ini  background_processes.py  data_base.py  logger.py  main.py  models.py
project-old/src/project/alembic/: env.py
project-old/src/project/alembic/versions/: 001_initial_schema.py
project-old/src/project/redis_queue/: redis_queue.py
project-old/src/project/sends/: create_content.py  send_email_notification.py  send_notification.py  send_vk_notification.py
project/info/: README.md  info-en.txt  info-ru.txt
project/src/project/: .env  config.py  create_content.py  notifications.db
project/src/project/templates/: deadline_student_email.html  deadline_student_email.txt  deadline_student_vk.txt  deadline_teacher_email.html  deadline_teacher_email.txt  deadline_teacher_vk.txt  new_assignment_email.html  new_assignment_email.txt  new_assignment_vk.txt  review_result_email.html  review_result_email.txt  review_result_vk.txt
test_API_Gateway/: pyproject.toml
