[project]
name = "project"
version = "0.1.0"
description = ""
authors = [
    {name = "goshmak",email = "gosh.maksimov2017@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "aiogram (>=3.28.2,<4.0.0)",
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn (>=0.47.0,<0.48.0)",
    "faststream[rabbit] (>=0.6.7,<0.7.0)",
    "mypy (>=2.1.0,<3.0.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "ruff (>=0.15.13,<0.16.0)",
    "psycopg2 (>=2.9.12,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "aiosmtplib (>=5.1.0,<6.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "email-validator (>=2.3.0,<3.0.0)",
    "redis (>=8.0.0,<9.0.0)",
    "torrelque (>=0.9.0,<0.10.0)",
    "asyncpg (>=0.31.0,<0.32.0)"
]

[tool.poetry]
packages = [{include = "project", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
